--- a/database/config/my.cnf
+++ b/database/config/my.cnf
@@ -1,10 +1,6 @@
 # docker/mysql/conf.d/my.cnf
 
 [mysqld]
+log-output=FILE
 general_log = 1
-general_log_file = /var/log/mysql/query.log
-
-slow_query_log = 1
-long_query_time = 1 # seconds
-slow_query_log_file = /var/log/mysql/slow.log
-log_queries_not_using_indexes = 0
+general_log_file = /var/log/mysql/comp3335_project.log
