--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - ./database/sql:/docker-entrypoint-initdb.d
       - ./database/config:/etc/mysql/conf.d
       - ./database/log:/var/log/mysql
+      - ./database/data:/var/lib/mysql
     command: bash -c "chmod 644 /etc/mysql/conf.d/my.cnf && /entrypoint.sh mysqld"
     ports:
       - 3306:3306
